--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.2.3
 boto==2.49.0
 boto3==1.11.8
-botocore=1.14.8
+botocore==1.14.8
 Bottleneck==1.3.2
 Django==3.2.9
 django-filter=2.2.0
