--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ boto3==1.11.8
 botocore==1.14.8
 Bottleneck==1.3.2
 Django==3.2.9
-django-filter=2.2.0
+django-filter==2.2.0
 django.storages==1.8
 docutils==0.15.2
 gunicorn==20.1.0
